--- a/src/main/resources/com/cointosssimulator/MainMenu.fxml
+++ b/src/main/resources/com/cointosssimulator/MainMenu.fxml
@@ -12,11 +12,12 @@
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.cointosssimulator.CoinTossController" style="-fx-background-color: white">
-    <VBox alignment="CENTER" style="-fx-padding: 20px">
-        <Label fx:id="AppLogo" text="Coin-toss Simulator" style=""></Label>
+    <VBox alignment="CENTER" style="-fx-padding: 20px" spacing="15">
+        <Label fx:id="AppLogoLabel" text="Coin-toss Simulator" style=""></Label>
         <ImageView fx:id="imageView" fitWidth="400.0" fitHeight="300.0">
             <Image url="@coinSpin.gif"/>
         </ImageView>
-        <Button fx:id="startButton" text="Begin" onAction="#switchToCoinFlipScene"></Button>
+        <ComboBox fx:id="coinList" promptText="Select a coin to flip"/>
+        <Button fx:id="startButton" text="Begin" onAction="#switchToCoinFlipScene"/>
     </VBox>
 </AnchorPane>
