--- a/src/main/resources/com/cointosssimulator/coin-toss.fxml
+++ b/src/main/resources/com/cointosssimulator/coin-toss.fxml
@@ -9,11 +9,18 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
+<?import javafx.scene.layout.HBox?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.cointosssimulator.CoinTossController" style="-fx-background-color: white">
     <VBox alignment="CENTER" style="-fx-padding: 20px">
-      <Label fx:id="AppLogo" text="Coin-toss Simulator" style=""></Label>
+      <Label fx:id="AppLogoLabel" text="Coin-toss Simulator" style=""></Label>
+        <Label fx:id="headsOrTailsLabel" text="Heads, or Tails?"></Label>
+        <HBox alignment="CENTER" spacing="60">
+            <Button fx:id="headsButton" text="Heads"></Button>
+            <Label text=" or " fx:id="orLabel"></Label>
+            <Button fx:id="tailsButton" text="Tails"></Button>
+        </HBox>
         <ImageView fx:id="imageView" fitWidth="400.0" fitHeight="400.0">
         <Image url="@coinFlip.gif"/>
         </ImageView>
