Added random coin flip based on Random class to decide to decide which end the coin will land on using integers.  Also added fxml files for each result for dime, nickel, and quarter, which is heads and tails for each.  Once the user selects heads or tails, the scene changes to what the coin landed on with an image.

--- a/src/main/resources/com/cointosssimulator/coin-toss.fxml
+++ b/src/main/resources/com/cointosssimulator/coin-toss.fxml
@@ -17,9 +17,9 @@
       <Label fx:id="AppLogoLabel" text="Coin-toss Simulator" style=""></Label>
         <Label fx:id="headsOrTailsLabel" text="Heads, or Tails?"></Label>
         <HBox alignment="CENTER" spacing="60">
-            <Button fx:id="headsButton" text="Heads"></Button>
+            <Button fx:id="headsButton" text="Heads" onAction="#headsOrTails"></Button>
             <Label text=" or " fx:id="orLabel"></Label>
-            <Button fx:id="tailsButton" text="Tails"></Button>
+            <Button fx:id="tailsButton" text="Tails" onAction="#headsOrTails"></Button>
         </HBox>
         <ImageView fx:id="imageView" fitWidth="400.0" fitHeight="400.0">
         <Image url="@coinFlip.gif"/>
