In this commit, I added a back feature to head back to the main screen to allow a user to flip more coins if they chose to without having to restart the program (like in the previous version).  Additionally, I tweaked the text messages on the screen that displays the results and the coin images to something a bit more fitting.  Instead of a generic message, a custom message stating, for example, "the quarter landed on heads.  You selected heads. You win!" instead of "Quarter-Heads" with the corresponding image.

--- a/src/main/resources/com/cointosssimulator/Dime-heads.fxml
+++ b/src/main/resources/com/cointosssimulator/Dime-heads.fxml
@@ -14,10 +14,12 @@
             style="-fx-background-color: white">
     <StackPane style="-fx-padding: 20px">
         <VBox alignment="CENTER" spacing="50">
-            <Label text="Dime-Heads" style="-fx-font-size: 25px;"/>
+            <Label text="The Dime landed on heads!" style="-fx-font-size: 25px;"/>
+            <Label fx:id="resultsLabel"/>
             <ImageView fx:id="imageView" fitHeight="400.0" fitWidth="400.0">
                 <Image url="@Dime-heads.jpg"/>
             </ImageView>
+            <Button fx:id="backButton" text="Back" onAction="#switchToMainScreenScene"></Button>
         </VBox>
     </StackPane>
 </AnchorPane>
