--- a/src/main/resources/com/cointosssimulator/Dime-tails.fxml
+++ b/src/main/resources/com/cointosssimulator/Dime-tails.fxml
@@ -14,10 +14,12 @@
             style="-fx-background-color: white">
     <StackPane style="-fx-padding: 20px">
         <VBox alignment="CENTER" spacing="50">
-            <Label text="Dime-tails" style="-fx-font-size: 25px;"/>
+            <Label text="The dime landed on tails!" style="-fx-font-size: 25px;"/>
+            <Label fx:id="resultsLabel" />
             <ImageView fx:id="imageView" fitHeight="400.0" fitWidth="400.0">
                 <Image url="@Dime-tails.jpg"/>
             </ImageView>
+            <Button fx:id="backButton" text="Back" onAction="#switchToMainScreenScene"></Button>
         </VBox>
     </StackPane>
 </AnchorPane>
