--- a/src/main/resources/com/cointosssimulator/Quarter-heads.fxml
+++ b/src/main/resources/com/cointosssimulator/Quarter-heads.fxml
@@ -14,10 +14,12 @@
             style="-fx-background-color: white">
         <StackPane style="-fx-padding: 20px">
         <VBox alignment="CENTER" spacing="50">
-        <Label text = "Quarter-Heads" style="-fx-font-size: 25px;"></Label>
+        <Label text = "The quarter landed on heads!" style="-fx-font-size: 25px;"></Label>
+                <Label fx:id="resultsLabel" />
         <ImageView fx:id="imageView" fitHeight="400.0" fitWidth="400.0">
                 <Image url="@Quarter-heads.jpg"></Image>
         </ImageView>
+                <Button fx:id="backButton" text="Back" onAction="#switchToMainScreenScene"></Button>
         </VBox>
         </StackPane>
 </AnchorPane>
