With this release, a working statistics page was created, which is accessible from the main page. Coins tossed, games won, games lost, heads landed on, and tails landed on are all tracked and available to the user on this page. In addition to this, comments were added to the main files to help viewers understand what is going on in this project.  This project does only have two classes, and the logic is contained in the controller class.  In addition to improving readability, the project was examined for issues, and some slight refactoring and code cleanup occurred.

--- a/src/main/resources/com/cointosssimulator/CoinTossStyle.css
+++ b/src/main/resources/com/cointosssimulator/CoinTossStyle.css
@@ -1,28 +1,12 @@
 #AppLogoLabel {
     -fx-font-size: 32px;
-    -fx-padding: 20px;
+    -fx-padding: 10px;
 
-}
-
-#startButton {
-    -fx-font-size: 20px;
-}
-
-#backButton {
-    -fx-font-size: 20px;
 }
 
 #headsOrTailsLabel {
     -fx-font-size: 20px;
     -fx-padding: 20px;
-}
-
-#headsButton {
-    -fx-font-size: 20px;
-}
-
-#tailsButton {
-    -fx-font-size: 20px;
 }
 
 #orLabel {
@@ -33,6 +17,10 @@
     -fx-font-size: 20px;
 }
 
-#resultsLabel {
+.label {
     -fx-font-size: 25px;
+}
+
+.button {
+    -fx-font-size: 20px;
 }
