--- a/src/main/resources/com/cointosssimulator/Nickel-heads.fxml
+++ b/src/main/resources/com/cointosssimulator/Nickel-heads.fxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
+
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.cointosssimulator.CoinTossController"
@@ -19,7 +16,7 @@
             <ImageView fx:id="imageView" fitHeight="400.0" fitWidth="400.0">
                 <Image url="@Nickel-heads.jpg"/>
             </ImageView>
-            <Button fx:id="backButton" text="Back" onAction="#switchToMainScreenScene"></Button>
+            <Button fx:id="backButton" text="Back" onAction="#switchToMainScreenScene"/>
         </VBox>
     </StackPane>
 </AnchorPane>
