--- a/src/main/resources/com/cointosssimulator/Quarter-heads.fxml
+++ b/src/main/resources/com/cointosssimulator/Quarter-heads.fxml
@@ -1,25 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
+
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.cointosssimulator.CoinTossController"
             style="-fx-background-color: white">
         <StackPane style="-fx-padding: 20px">
         <VBox alignment="CENTER" spacing="50">
-        <Label text = "The quarter landed on heads!" style="-fx-font-size: 25px;"></Label>
+                <Label text="The quarter landed on heads!" style="-fx-font-size: 25px;"/>
                 <Label fx:id="resultsLabel" />
         <ImageView fx:id="imageView" fitHeight="400.0" fitWidth="400.0">
-                <Image url="@Quarter-heads.jpg"></Image>
+                <Image url="@Quarter-heads.jpg"/>
         </ImageView>
-                <Button fx:id="backButton" text="Back" onAction="#switchToMainScreenScene"></Button>
+                <Button fx:id="backButton" text="Back" onAction="#switchToMainScreenScene"/>
         </VBox>
         </StackPane>
 </AnchorPane>
