--- a/src/main/resources/com/cointosssimulator/coin-toss.fxml
+++ b/src/main/resources/com/cointosssimulator/coin-toss.fxml
@@ -1,30 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.HBox?>
+
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.cointosssimulator.CoinTossController" style="-fx-background-color: white">
     <VBox alignment="CENTER" style="-fx-padding: 20px">
-      <Label fx:id="AppLogoLabel" text="Coin-toss Simulator" style=""></Label>
-        <Label fx:id="headsOrTailsLabel" text="Heads, or Tails?"></Label>
+        <Label fx:id="AppLogoLabel" text="Coin-toss Simulator"/>
+        <Label fx:id="headsOrTailsLabel" text="Heads, or Tails?"/>
         <HBox alignment="CENTER" spacing="60">
-            <Button fx:id="headsButton" text="Heads" onAction="#headsOrTails"></Button>
-            <Label text=" or " fx:id="orLabel"></Label>
-            <Button fx:id="tailsButton" text="Tails" onAction="#headsOrTails"></Button>
+            <Button fx:id="headsButton" text="Heads" onAction="#headsOrTails"/>
+            <Label text=" or " fx:id="orLabel"/>
+            <Button fx:id="tailsButton" text="Tails" onAction="#headsOrTails"/>
         </HBox>
         <ImageView fx:id="imageView" fitWidth="400.0" fitHeight="400.0">
         <Image url="@coinFlip.gif"/>
         </ImageView>
-      <Button fx:id="backButton" text="Back" onAction="#switchToMainScreenScene"></Button>
+        <Button fx:id="backButton" text="Back" onAction="#switchToMainScreenScene"/>
 
     </VBox>
 
