Split CoinTossController into CoinTossController and StatisticsController, creating a separate controller for the stats page

--- a/src/main/resources/com/cointosssimulator/Statistics.fxml
+++ b/src/main/resources/com/cointosssimulator/Statistics.fxml
@@ -5,14 +5,14 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.cointosssimulator.CoinTossController">
+            fx:controller="com.cointosssimulator.StatisticsController">
     <VBox alignment="CENTER" style="-fx-padding: 20px" spacing="15">
         <Label fx:id="coinsTossed"/>
         <Label fx:id="gamesWon"/>
         <Label fx:id="gamesLost"/>
         <Label fx:id="headsLanded"/>
         <Label fx:id="tailsLanded"/>
-        <Button fx:id="backButton" text="Back" onAction="#switchToMainScreenScene"/>
+        <Button fx:id="backButton" text="Back" onAction="#switchBackToMainScene"/>
     </VBox>
 
 </AnchorPane>
