--- a/src/main/resources/com/cointosssimulator/CoinTossStyle.css
+++ b/src/main/resources/com/cointosssimulator/CoinTossStyle.css
@@ -26,3 +26,14 @@
     -fx-pref-height: 50px;
     -fx-pref-width: 150px;
 }
+#subjectTextArea {
+    -fx-pref-height: 35px;
+    -fx-pref-width: 450px;
+    -fx-font-size: 20px;
+}
+
+#bodyTextArea {
+    -fx-pref-width: 450px;
+    -fx-pref-height: 200px;
+    -fx-font-size: 20px;
+}
