--- a/src/main/resources/com/cointosssimulator/MainMenu.fxml
+++ b/src/main/resources/com/cointosssimulator/MainMenu.fxml
@@ -17,6 +17,7 @@
         <HBox alignment="CENTER" spacing="75">
             <Button fx:id="startButton" text="Begin" onAction="#switchToCoinFlipScene"/>
             <Button fx:id="statisticsButton" text="Stats" onAction="#switchToStatsScene" />
+            <Button fx:id="helpButton" text="Help" onAction="#switchToHelpScene" />
         </HBox>
 
     </VBox>
